--- a/packages/vitepress-theme-censored/styles/index.css
+++ b/packages/vitepress-theme-censored/styles/index.css
@@ -15,7 +15,7 @@ html.light {
     --cencored-bg-color: var(--censored-c-ice-2);
 
     /*navbar*/
-    --cencored-nav-color: var(--censored-c-ice-4);
+    --cencored-nav-color: var(--censored-c-marsh-3);
     --cencored-nav-text-color: var(--censored-c-ice-1);
     --cencored-nav-hover-color: var(--censored-c-ice-1);
     --cencored-nav-text-hover-color: var(--censored-c-ice-4);
